user provided input data

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -16,8 +16,14 @@ go_sdk.host()
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
+go_deps.module(
+    path = "github.com/manifoldco/promptui",
+    sum = "h1:3V4HzJk1TtXW1MTZMP7mdlwbBpIinw3HztaIlYthEiA=",
+    version = "v0.9.0",
+)
 use_repo(
     go_deps,
+    "com_github_manifoldco_promptui",
     "com_github_spf13_pflag",
     "in_gopkg_yaml_v3",
     "org_golang_x_text",
