--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
     importpath = "github.com/uweru/templeton",
     visibility = ["//visibility:private"],
     deps = [
-        "@com_github_manifoldco_promptui//:go_default_library",
+        "@com_github_charmbracelet_huh//:huh",
         "@com_github_spf13_pflag//:pflag",
         "@in_gopkg_yaml_v3//:yaml_v3",
         "@org_golang_x_text//cases",
